<resources>
    <string name="app_name">微信多开助手</string>
    <string name="auxiliary_name">微信多开助手辅助</string>
    <string name="auxiliary_content">多开神器辅助功能，安全可靠，可放心开启使用</string>
    <string name="banben_versionname">版本：</string>
    <string name="launcher_versionname">版本号：v%s</string>
    <string name="open">打开</string>
    <string name="launcher_count_down">%1$ss</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="click_to_skip_time">点击跳过 %d</string>
    <string name="lack_of_permissions">应用缺少必要的权限！请点击\"权限\"，打开所需要的权限。</string>
    <string name="preview_btn_text">预览</string>
    <string name="get_pay_number_fail">获取订单失败！</string>
    <string name="back_comfirm_success">您有后台已自动确认支付成功的订单</string>
    <string name="important_info">重要通知</string>
    <string name="open_service_msg">\t后台仍未确认到订单信息,点击放弃查询,将永远不再后台查询下面的订单,如您确实支付,请勿点击放弃查询。\n\t如有任何疑问,请联系客服解决。</string>
    <string name="comfirm_success">订单已确认支付</string>
    <string name="comfirm_fail">订单仍未能确认</string>
    <string name="open_service">后台查询</string>
    <string name="forgive_service">放弃查询</string>
    <string name="notification_error">检测到您可能屏蔽了本应用的通知栏,后台自动查订单功能可能会失效</string>
    <string name="cp_title0">1、一个手机能开多少个微信？</string>
    <string name="cp_0">※  应用可以最多制作99个分身。主要取决于手机配置。</string>
    <string name="cp_title1">2、分身账号是否会导致封号？</string>
    <string name="cp_1">※ 1、新注册账号需要养号，新帐号30天内不要登陆多开制作的客户端，官方账号对新注册的账号监管非常严。\n
\t\t1、使用官方客户端注册新账号，不要使用多开制作的客户端注册新账号。
\n\t\t2、账号好友/粉丝过万，过万不一定被封号，但是有可能被限制使用或者被封的可能，如果你的好友/粉丝过万最好不要一直发广告（解决方案：当好友或粉丝过万时，不要一直发广告）
\n\t\t3、“集赞”活动和“转发”活动，这两类的活动社交APP是不太支持的，如果你做太过了也是会被封的，之前社交APP已经出台了关于微信拒绝诱导性传播的通知，已经说的很明确了。（解决方案：尽可能的不要参与朋友圈内的集赞及转发活动）
\n\t\t4、不得发布色情图片、色情词语违规、违法信息。这类100%封杀（解决方案：不发布色情图片和色情词语，不发布一些违法信息）
\n\t\t5、不要随便转发或打开朋友圈分享的链接信息（解决方案：不转发或分享朋友圈的链接信息）
\n\t\t6、在群内不要随便发布广告等第三词汇，被踢而损失好友数量（解决方案：在群内我们尽可能的不发布广告或敏感词汇）
\n\t\t7、在社交APP群里，添加好友要分时段进行，一次添加限制不得多于20人，隔一小时进行（解决方案：每次添加好友，不要超过15人，下次添加好友，间隔时间段保持一小时以上）
\n\t\t8、信息发布中出现累计超过10次的敏感词语：“支付宝、银行、银行卡、汇款、打款、打钱、账号、帐户、转账、网银、多少钱、怎么卖、价格”会被封号（解决方案：信息发布中，不要包含有和钱有关的词语）
\n\t\t9、当有大量好友加你时，依次几天分批通过，并注意对方敏感词。（解决方案：当有大量好友添加你时，我们每天添加不超过15人）
\n\t\t10、保护自己帐号，打字询价说敏感词的，一律不要直接回复！（解决方案：遇到打字询价或者说一些敏感词的，转化成非敏感词。）11、避免违规举报，在朋友圈经常更新生活动态。并多与朋友圈好友互动。增加好友之间信作与凝聚力。
\n\t\t12、选择群，不要添加同质化严重的微信群，群内成员多数相同。
\n\t\t13、在微信上卖东西，和好友聊天多次使用打钱、支付宝、汇款、建行、工行、付款方式等和社交APP背道而驰的词语。
\n\t\t14、使用社交APP第三方工具进行站街、刷粉等，如果你使用的社交APP一些营销工具，做得太够也一样被封号。
\n\t\t15、社交APP发的内容被大量举报，如果你发的让粉丝或者朋友圈人举报，并且人数比较多的话也是可能被封号的。（解决问题：在色情、敏感词、加人等方面避免）</string>
    <string name="cp_title2">3、苹果手机或电脑是否可以使用？</string>
    <string name="cp_2">※ 应用暂时仅限安卓手机使用。</string>
    <string name="cp_title3">4、社交APP出现接收信息不及时是怎么回事？</string>
    <string name="cp_3">※ 多开神器需要设置成白名单和自启才能够及时收取信息。若有疑问加客服QQ号。</string>
    <string name="cp_title4">5、分身提示制作失败？</string>
    <string name="cp_4">※ 当用户网络不稳定时，可能会造成制作分身不成功，用户可以把网络切换成4G或是wifi进行尝试。</string>
    <string name="cp_title5">6、分身是怎么收费的？</string>
    <string name="cp_5">※ 因开发需要技术成本，后期运营需要服务器、域名等成本，所以会收取相应的技术成本费用。【切记珍惜好制作好的分身，不要随意删除，制作好之后一定记得添加白名单和自启动，不要升级主社交APP、不要刷机、还原手机和清除本应用数据等】</string>
    <string name="cp_title6">7、手机系统和微信升级或是出厂设置，分身还能用吗？</string>
    <string name="cp_6">※ 手机系统升级后，分身正常使用。恢复出厂设置后，分身无法使用【切记不要升级主微信、不要刷机、还原手机等】</string>
    <string name="cp_title7">8、分身为什么出现闪退或无网络的情况？</string>
    <string name="cp_7">※ 首先手机里的主社交APP为非特殊功能的；其次看是否已将制作好的微信加入白名单。如果两项都是正常的，检查手机的网络环境是否流畅。</string>
    <string name="cp_title8">9、带一键转发或其他特殊功能社交APP是否能分身？</string>
    <string name="cp_8">※ 本应用分身只支持官方软件 。</string>
    <string name="cp_title9">10、打开分身提示“初始化失败，请安装官方软件”怎么办？</string>
    <string name="cp_9">※ 在“手机管家”找到对应的分身，把“读取已安装应用列表”这一项选择设置成“允许”，分身就能正常启动使用。</string>
    <string name="cp_title10">11、能否使用其他图片制作分身？</string>
    <string name="cp_10">※  不可以，制作出来的分身只能使用正版图标。</string>
    <string name="cp_title11">12、使用分身是否安全？</string>
    <string name="cp_11">※ 公司为正规注册，请放心使用。</string>
    <string name="cp_title12">13、分身摄像头打不开？</string>
    <string name="cp_12">※ 请去手机管理中查看摄像头权限是否全部允许！</string>
    <string name="cp_title13">14、删了多开软件后重新安装原来的分身还在吗？</string>
    <string name="cp_13">多开软件删除后对应的分身会被清空，且无法找回，请勿随意删除多开软件。</string>
    <string name="cp_title14">15、扣费了但是没有多开成功怎么办？</string>
    <string name="cp_14">用户网络波动会导致支付异常，请点击失败弹框中间刷新按钮即可开启功能，若还未开启，请联系客服。</string>
    <string name="cp_title15">16、怎么自动回复？</string>
    <string name="cp_15">开启自动回复开关，输入自动回复内容即可。开启息屏自动回复后，手机黑屏状态也可以自动回复。</string>
    <string name="cp_title16">17、svip有什么用？</string>
    <string name="cp_16">开启svip功能后，所有vip功能都可以使用，svip功能价格超级优惠，值得购买！</string>
    <string name="cp_title17">18、仿封号功能有用吗？</string>
    <string name="cp_17">社交APP多开有几率导致账号被封，用户开启仿封号功能，可提高社交APP分身账号安全。</string>
    <string name="cp_title18">19、去启动页广告有什么用？</string>
    <string name="cp_18">开启去启动页广告功能后，用户每次打开应用不再弹启动页，提高启动加速。</string>
    <string name="cp_title19">20、生成器功能有什么用？</string>
    <string name="cp_19">图片生成器功能可自动生成微信、QQ、支付宝等应用功能图片，供装逼娱乐。</string>
    <string name="cp_title20">21、创建的分身突然打不开或者点击没有反应？</string>
    <string name="cp_20">\t\t\t这种情况可能是主微信版本升级或本多开应用升级导致。\n\t\t\t解决方法：在主界面长按‘安装一个分身’按钮。\n\t\t\t之后会有一个清空微信model的弹窗，点击确认。\n\t\t\t如果还是不懂或者还是解决不了请联系客服处理。</string>
    <string name="wxdk_zhujiemian">社交APP多开主界面</string>
    <string name="weixin_fenshen">微信分身</string>
    <string name="qq_fenshen">QQ分身</string>
    <string name="not_xiangguan_app">没有安装相关app</string>
    <string name="tijiao_dingdan_shibai">提交订单失败</string>
    <string name="zhifu_chenggong">支付成功</string>
    <string name="zhifu_shibai">支付失败</string>
    <string name="wangluo_yichang">网络异常</string>
    <string name="anzhuang_weixin_app">未检测到微信客户端，请先安装！</string>
    <string name="anzhuang_zfb_app">未检测到支付宝客户端，请先安装！</string>
    <string name="anzhuang_qq_app">未检测到QQ客户端，请先安装！</string>
    <string name="qing_xz_kefu">请选择客服</string>
    <string name="pay_dialog_scfy">首冲包月%s/月</string>
    <string name="pay_dialog_zcfy">常规包月%s/月</string>
    <string name="mianfei_shiyong"><Data><![CDATA[<font color=\"#f53d56\">免费试用</font>]]></Data></string>
    <string name="mianfei_shiyong2">免费试用</string>
    <string name="chuang_jian_shi_jian">创建时间：</string>
    <string name="chuang_jian_cheng_gong">创建成功</string>
    <string name="chuang_jian_shi_bai">创建失败</string>
    <string name="input_value_null">名称不为空</string>
    <string name="shanchu_chenggong">删除成功</string>
    <string name="shanchu_shibai">删除失败</string>
    <string name="adddesktop_chenggong">添加成功</string>
    <string name="adddesktop_shibai_qx">添加失败，请检查应用创建快捷方式权限是否开启！</string>
    <string name="adddesktop_shibai">添加失败,有重复名称,请改名后再次尝试</string>
    <string name="make_apk_holder_mfsy"><Data><![CDATA[<font color=\"#f53d56\">   剩余时间：%s</font>]]></Data></string>
    <string name="pay_single">%s元/次，创建单个分身</string>
    <string name="pay_lifeTime">%s元/终身，分身创建无限制</string>
    <string name="tip_morethanone">金额必须大于等于1</string>
    <string name="pay_ws_funciton_lingqian">%1$s元/开启多开神器功能</string>
    <string name="pay_ws_funciton_hongbao">%1$s元/开启多开神器功能</string>
    <string name="pay_ws_funciton_tixian">%1$s元/开启提现截图生成器功能</string>
    <string name="pay_ws_funciton_duihua">%1$s元/开启对话截图生成器功能</string>
    <string name="pay_ws_funciton_pyquan">%1$s元/开启朋友圈动态截图生成器功能</string>
    <string name="pay_ws_funciton_all">%1$s元/开启所有截图生成器功能</string>
    <string name="weichat_svip_all_function">%1$s元/开启所有vip推荐功能</string>
    <string name="weichat_svip_all_function_title">所有vip推荐功能</string>
    <string name="weichat_qgg_function">%1$s元/开启启动页去广告功能</string>
    <string name="weichat_qgg_function_title">启动页去广告</string>
    <string name="weichat_ffh_function">%1$s元/开启分身防封号</string>
    <string name="weichat_ffh_function_title">分身防封号</string>
    <string name="weichat_qgg_pay_s">支付成功，已关闭启动页广告!</string>
    <string name="weichat_ffh_pay_s">支付成功，已提高账号安全!</string>
    <string name="weichat_wx_qunliao">%1$s元/开启群聊截图生成器</string>
    <string name="weichat_wx_qunliao_title">群聊截图生成器</string>
    <string name="weichat_wx_zz">%1$s元/开启转账截图生成器</string>
    <string name="weichat_wx_zz_title">转账截图生成器</string>
    <string name="weichat_zfb_hb">%1$s元/开启支付宝红包生成器</string>
    <string name="weichat_zfb_hb_title">支付宝红包生成器</string>
    <string name="weichat_zfb_tx">%1$s元/开启支付宝提现生成器</string>
    <string name="weichat_zfb_tx_title">支付宝提现生成器</string>
    <string name="weichat_zfb_lq">%1$s元/开启支付宝余额生成器</string>
    <string name="weichat_zfb_lq_title">支付宝余额生成器</string>
    <string name="weichat_zfb_zz">%1$s元/开启支付宝转账生成器</string>
    <string name="weichat_zfb_zz_title">支付宝转账生成器</string>
    <string name="weichat_qq_hb">%1$s元/开启QQ红包生成器</string>
    <string name="weichat_qq_hb_title">QQ红包生成器</string>
    <string name="weichat_qq_tx">%1$s元/开启QQ余额生成器</string>
    <string name="weichat_qq_tx_title">QQ余额生成器</string>
    <string name="weichat_qq_lq">%1$s元/开启QQ钱包生成器</string>
    <string name="weichat_qq_lq_title">QQ钱包生成器</string>
    <string name="weichat_qq_zz">%1$s元/开启QQ转账生成器</string>
    <string name="weichat_qq_zz_title">QQ转账生成器</string>
    <string name="ws_gunction_status_true">已开启</string>
    <string name="ws_gunction_status_false">快速开启</string>
    <string name="pay_ws_huifu_all">%1$s元/开启自动回复所有功能</string>
    <string name="pay_ws_huifu_xp">%1$s元/开启息屏自动回复</string>
    <string name="pay_ws_huifu_nr">%1$s元/开启自定义回复内容</string>
    <string name="open_hb_status">自动抢红包已打开</string>
    <string name="close_hb_status">自动抢红包已关闭</string>
    <string name="pzy_wx_qhb">抢红包功能</string>
    <string name="pay_wx_hb_svip">%1$s元/开启抢红包全部功能</string>
    <string name="pay_wx_title_svip">开启抢红包全部功能</string>
    <string name="pay_ws_hb_shouqi">%1$s元/提高手气最佳概率功能</string>
    <string name="pay_ws_title_shouqi">提高手气最佳概率功能</string>
    <string name="pay_ws_hb_dabao">%1$s元/提高抢大包概率功能</string>
    <string name="pay_ws_title_dabao">提高抢大包概率功能</string>
    <string name="pay_wx_hb_xiaobo">%1$s元/最高概率躲避最小包</string>
    <string name="pay_wx_hb_xiaobo_title">最高概率躲避最小包</string>
    <string name="pay_ws_hb_jiasudu">%1$s元/抢红包加速度功能</string>
    <string name="pay_ws_title_jiasudu">抢红包加速度功能</string>
    <string name="pay_ws_hb_ganrao">%1$s元/只能干扰竞争者功能</string>
    <string name="pay_ws_title_ganrao">智能干扰竞争者功能</string>
    <string name="pay_ws_hb_xpqhb">%1$s元/息屏抢自动红包功能</string>
    <string name="pay_ws_title_xpqhb">息屏抢自动红包功能</string>
    <string name="pay_ws_hb_zddx">%1$s元/抢到红包自动答谢</string>
    <string name="pay_ws_title_zddx">抢到红包自动答谢</string>
    <string name="hb_scroll_user_id">\t\t%1$s秒前用户%2$s开通了%3$s</string>
    <string name="wx_appid">wxc14f8f05a1603031</string>
    <string name="qqqb">QQ钱包</string>
    <string name="qqqb_qbhint">Q币余额(Q币)</string>
    <string name="qqqb_money">账户余额(元)</string>
    <string name="qqqb_xzyh">选择银行卡</string>
    <string name="qqqb_cardtype">卡类型</string>
    <string name="qqqb_cardtype_tv">储蓄卡</string>
    <string name="qqqb_cardnumber_hint">银行卡尾号(后四位数)</string>
    <string name="qqqb_prview">生成预览</string>
    <string name="qqzz">QQ转账</string>
    <string name="qqzz_xzlx">选择类型</string>
    <string name="qqzz_xzlx_sq">收钱</string>
    <string name="qqzz_xzlx_zc">转出</string>
    <string name="qqzz_money_hint">转账金额(元)</string>
    <string name="qqzz_xzlx_nic_hint">对方昵称</string>
    <string name="qqzz_xzlx_preview">生成预览</string>
    <string name="qqye">QQ余额</string>
    <string name="qqye_money_hint">账户余额(元)</string>
    <string name="qqye_preview">生成预览</string>
    <string name="qqye_black">返回</string>
    <string name="qqye_ye">余额</string>
    <string name="qqye_jl">记录</string>
    <string name="qqye_wdye">我的余额</string>
    <string name="qqye_tx">提现</string>
    <string name="qqye_cz">充值</string>
    <string name="qqye_bottom_1">中国人民财产保险股份有限公司</string>
    <string name="qqye_bottom_2">为您的</string>
    <string name="qqye_bottom_3">支付安全</string>
    <string name="qqye_bottom_4">保驾护航</string>
    <string name="wxtx">微信提现</string>
    <string name="wxtx_xzyh">选择银行</string>
    <string name="wxtx_xzyh_ini">中国工商银行</string>
    <string name="wxtx_cardnumber_hint">银行卡尾号(后四位)</string>
    <string name="wxtx_money_hint">提现金额</string>
    <string name="wxtx_tjsxf">提交手续费</string>
    <string name="wxtx_preview">生成预览</string>
</resources>