<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#10b8f2">

            <ImageView
                android:id="@+id/qqbalance_preview_title_iv"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_qqhb_back"
                android:padding="13dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/color_white"
                android:textSize="15sp"
                android:text="@string/qqye_black"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqye_ye"
                android:textColor="@color/color_white"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/color_white"
                android:textSize="15sp"
                android:text="@string/qqye_jl"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dbdedd"
            android:layout_marginTop="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/qqye_wdye"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="15dp"
                android:src="@mipmap/qq_yue"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/qqbalance_preview_money_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="222.00元"
                android:textColor="#333333"
                android:textSize="24sp"
                android:layout_marginRight="51dp"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dbdedd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qqye_tx"
                android:textSize="15sp"
                android:textColor="#333333"
                android:gravity="center"
                android:background="@drawable/white_noshape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qqye_cz"
                android:textSize="15sp"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:background="@drawable/qqblue_shape"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqye_bottom_1"
            android:textColor="@color/color_txtash"
            android:textSize="11sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqye_bottom_2"
                android:textColor="@color/color_txtash"
                android:textSize="11sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqye_bottom_3"
                android:textColor="#009ddd"
                android:textSize="11sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqye_bottom_4"
                android:textColor="@color/color_txtash"
                android:textSize="11sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
