<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/color_title">

        <ImageView
            android:id="@+id/qq_moneypacket_title_iv"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/qqqb"
            android:textColor="@color/color_white"
            android:textSize="18sp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/qq_moneypacket_qb_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/qqqb_qbhint"
        android:textSize="15sp"
        android:inputType="number|numberDecimal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/ashbg"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/qq_moneypacket_money_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:padding="10dp"
        android:hint="@string/qqqb_money"
        android:textSize="15sp"
        android:inputType="numberDecimal|number"/>

    <RelativeLayout
        android:id="@+id/qq_moneypacket_selectbank_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqqb_xzyh"
            android:textColor="@color/color_txtblack"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/qq_moneypacket_selectbank_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_txtblack"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/ashbg"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout
        android:id="@+id/qq_moneypacket_cardtype_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqqb_cardtype"
            android:textColor="@color/color_txtblack"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/qq_moneypacket_cardtype_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqqb_cardtype_tv"
            android:textColor="@color/color_txtblack"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/ashbg"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/qq_moneypacket_cardnumber_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:padding="10dp"
        android:hint="@string/qqqb_cardnumber_hint"
        android:textSize="15sp"
        android:inputType="number"
        android:maxLength="4"/>


    <Button
        android:id="@+id/qq_moneypacket_btn_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/green_shape"
        android:textColor="@color/color_white"
        android:text="@string/qqqb_prview"/>
</LinearLayout>
