<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c9c9c9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_wxwithdrawals_iv"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxtx"
            android:textSize="18sp"
            android:textColor="@color/color_white"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/wxwithdrawals_bank"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxtx_xzyh"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/withdrawals_bank_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxtx_xzyh_ini"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/withdrawals_bankcard_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/wxtx_cardnumber_hint"
        android:background="@color/color_white"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:focusableInTouchMode="false"
        android:inputType="number|numberDecimal"
        android:textColor="@color/color_black"
        android:textColorHint="@color/txtash"
        android:maxLength="4"/>

    <EditText
        android:id="@+id/withdrawals_money_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/wxtx_money_hint"
        android:background="@color/color_white"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:focusableInTouchMode="false"
        android:inputType="number|numberDecimal"
        android:textColor="@color/color_black"
        android:textColorHint="@color/txtash"/>

    <RelativeLayout
        android:id="@+id/withdrawals_poundage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_white"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxtx_tjsxf"
            android:textSize="13sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"/>

        <ImageView
            android:id="@+id/withdrawals_poundage_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/webviewtab_back_normal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/withdrawals_preview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wxtx_preview"
        android:textColor="#ffffff"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_green"/>

</LinearLayout>
