<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/color_title">

        <ImageView
            android:id="@+id/qq_balance_titile_iv"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/qqye"
            android:textColor="@color/color_white"
            android:textSize="18sp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/qq_balance_money_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:hint="@string/qqye_money_hint"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:inputType="number|numberDecimal"/>

    <Button
        android:id="@+id/qq_balance_btn_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/green_shape"
        android:text="@string/qqye_preview"
        android:textColor="@color/color_white"/>

</LinearLayout>
